testsuite/tests/parser/should_compile/read051.hs

{-# LANGUAGE KindSignatures #-}

module Foo where

data Foo (a :: *) = Foo a

